# maigo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  plugin.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude/: known-test-failures
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: bumpversion.yml  ci.yml  docs.yml
agents/: Anon.md  Raana.md  Soyo.md  Taki.md  Tomori.md
commands/: address-comments.md  board.md  crystallize.md  describe-pr.md  doctor.md  fix.md  go.md  memory.md  quick.md  remember.md  repo-audit.md  retro.md  review.md  take-issue.md  team.md  triage-issue.md
docs/: index.md
docs/agents/: anon.md  raana.md  soyo.md  taki.md  tomori.md
docs/commands/: address-comments.md  board.md  crystallize.md  describe-pr.md  doctor.md  fix.md  go.md  memory.md  quick.md  remember.md  repo-audit.md  retro.md  review.md  take-issue.md  team.md  triage-issue.md
docs/guides/: contributing.md  getting-started.md
docs/reference/: agents.md  character-colors.md  commands.md  hooks.md  memory.md  skills.md
docs/skills/: airflow-aware.md  command-router.md  commit-message.md  commitizen-aware.md  copyable-deliverable.md  doc-link-convention.md  failure-handling.md  git-workflow.md  github-reply-draft.md  github-title-description.md  harness-discipline.md  maigo-self-check.md  memory-loading.md  memory-propose-confirm.md  model-dispatch.md  narration.md  (+6 more)
hooks/: _hook_io.py  _retry_log.py  _token_usage.py  hooks.json  repo_detect.py  teammate_quality_check.py  token_usage.py  verify_completion.py
scripts/: _frontmatter.py  board_interactions.js  board_render.py  board_serve.py  board_serve_hook.py  board_state.py  pr_context_cache.py  retry_log_summary.py  token_usage_summary.py  validate_frontmatter.py  validate_memory.py  validate_plugin.py
tests/: conftest.py  test_board_render.py  test_board_serve.py  test_board_serve_hook.py  test_board_state.py  test_codex_plugin.py  test_describe_pr_command.py  test_pr_context_cache.py  test_repo_detect.py  test_retry_log_summary.py  test_teammate_quality_check.py  test_token_usage.py  test_validate_frontmatter.py  test_validate_memory.py  test_validate_plugin.py  test_verify_completion.py
(+40 files in other folders)
