[project]
name = "maigo"
version = "0.46.0"
description = "MyGO!!!!! 驅動的通用開發 agent flow。大家一起迷失吧。"
requires-python = ">=3.13"
license = {text = "MIT"}

[dependency-groups]
dev = ["pytest>=9.0.0", "pre-commit", "commitizen>=4.16", "mypy>=1.10"]
docs = ["mkdocs>=1.6,<2", "mkdocs-material>=9", "mkdocs-include-markdown-plugin>=6"]

[tool.pytest]
testpaths = ["tests"]
addopts = ["-q"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.13"

[[tool.mypy.overrides]]
module = ["_frontmatter", "_hook_io", "_retry_log", "_token_usage"]
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"
version_files = [
  '.claude-plugin/plugin.json:"version"',
  '.codex-plugin/plugin.json:"version"',
  '.pre-commit-config.yaml:rev:.+Commitizen',
]
version_scheme = "semver"
tag_format = "v$version"
annotated_tag = true
update_changelog_on_bump = true

[tool.uv.pip]
exclude-newer = "4 days"
